apps/ssh-server/ssh-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssh-server
  annotations:
    metallb.io/allow-shared-ip: main-node-vip
spec:
  selector:
    app: ssh-server
  type: LoadBalancer
  loadBalancerIP: 192.168.1.200
  ports:
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
    - name: socks5
      protocol: TCP
      port: 1080
      targetPort: 1080
