apps/ssh-server/ssh-server-wstunnel-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssh-server-wstunnel
spec:
  selector:
    app: ssh-server
  ports:
    - name: ws
      protocol: TCP
      port: 8080
      targetPort: 8080
